
===== SimpleMessageListenerContainer: BackOff support

The `SimpleMessageListenerContainer` can now be supplied with a `BackOff` instance for `consumer` startup recovery.
See <<containerAttributes>> for more information.

===== Channel Close Logging

A mechanism to control the log levels of channel closure has been introduced.
See <<channel-close-logging>>.

===== Consumer Tag Configuration

Previously, the consumer tags for asynchronous consumers were generated by the broker.
With this release, it is now possible to supply a naming strategy to the listener container.
See <<consumerTags>>.

===== RabbitTemplate Blocking Receive Methods

The `RabbitTemplate` now supports blocking in `receive` and `convertAndReceive` methods.
See <<polling-consumer>> for more information.

==== Changes in 1.4 Since 1.3

===== @RabbitListener Annotation

POJO listeners can be annotated with `@RabbitListener`, enabled by `@EnableRabbit` or `<rabbit:annotation-driven />`.
Spring Framework 4.1 is required for this feature.
See <<async-annotation-driven>> for more information.

===== RabbitMessagingTemplate

A new `RabbitMessagingTemplate` is provided to allow users to interact with RabbitMQ using `spring-messaging` `Message`s.
It uses the `RabbitTemplate` internally which can be configured as normal.
Spring Framework 4.1 is required for this feature.
See <<template-messaging>> for more information.

===== Listener Container 'Missing Queues Fatal' Attribute

1.3.5 introduced the `missingQueuesFatal` property on the `SimpleMessageListenerContainer`.
This is now available on the listener container namespace element.
See <<containerAttributes>>.

===== RabbitTemplate 'ConfirmCallback' Interface

The `confirm` method on this interface has an additional parameter `cause`.
When available, this parameter will contain the reason for a negative acknowledgement (nack).
See <<template-confirms>>.

===== RabbitConnectionFactoryBean
