@@ -1,0 +1,4 @@
+/**
+ * Classes related to application events
+ */
+package org.springframework.amqp.event;
