@@ -97,6 +97,11 @@ See <<containerAttributes>> for more information.
 A mechanism to control the log levels of channel closure has been introduced.
 See <<channel-close-logging>>.
 
+===== Application Events
+
+The `SimpleMessageListenerContainer` now emits application events when consumers fail.
+See <<consumer-events>> for more information.
+
 ===== Consumer Tag Configuration
 
 Previously, the consumer tags for asynchronous consumers were generated by the broker.
